GRADLE-1048 - Split up client pieces of the daemon into separate classes and added unit test coverage - Use non-zero exit status for client process when build fails in daemon.