@@ -15,38 +15,32 @@
  */
 package org.gradle.launcher;
 
-import org.gradle.*;
-import org.gradle.api.UncheckedIOException;
-import org.gradle.api.internal.DefaultClassPathRegistry;
+import org.gradle.BuildExceptionReporter;
+import org.gradle.GradleLauncherFactory;
+import org.gradle.StartParameter;
 import org.gradle.api.internal.project.ServiceRegistry;
 import org.gradle.api.logging.Logger;
 import org.gradle.api.logging.Logging;
 import org.gradle.initialization.DefaultCommandLineConverter;
 import org.gradle.initialization.DefaultGradleLauncherFactory;
-import org.gradle.initialization.ParsedCommandLine;
+import org.gradle.launcher.protocol.Build;
+import org.gradle.launcher.protocol.Command;
+import org.gradle.launcher.protocol.CommandComplete;
+import org.gradle.launcher.protocol.Stop;
 import org.gradle.logging.LoggingManagerInternal;
 import org.gradle.logging.LoggingServiceRegistry;
 import org.gradle.logging.StyledTextOutputFactory;
 import org.gradle.logging.internal.LoggingOutputInternal;
 import org.gradle.logging.internal.OutputEvent;
 import org.gradle.logging.internal.OutputEventListener;
-import org.gradle.messaging.remote.internal.Message;
-import org.gradle.util.Clock;
-import org.gradle.util.GUtil;
-import org.gradle.util.Jvm;
-import org.gradle.util.UncheckedException;
+import org.gradle.messaging.concurrent.Stoppable;
+import org.gradle.messaging.remote.internal.Connection;
 
-import java.io.*;
-import java.net.ConnectException;
-import java.net.InetAddress;
-import java.net.ServerSocket;
-import java.net.Socket;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-
-public class GradleDaemon {
-    public static final int PORT = 12345;
+/**
+ * The server portion of the build daemon. See {@link org.gradle.launcher.DaemonClientAction} for a description of the
+ * protocol.
+ */
+public class GradleDaemon implements Runnable {
     private static final Logger LOGGER = Logging.getLogger(Main.class);
     private final ServiceRegistry loggingServices;
     private final GradleLauncherFactory launcherFactory;
@@ -67,192 +61,92 @@ public class GradleDaemon {
     }
 
     public void run() {
-        try {
-            ServerSocket serverSocket = new ServerSocket(PORT);
-            while (true) {
-                LOGGER.lifecycle("Waiting for request");
-                Socket socket = serverSocket.accept();
-                try {
-                    OutputStream outputStream = new BufferedOutputStream(socket.getOutputStream());
-                    boolean finished = doRun(socket, outputStream);
-                    Message.send(new Stop(), outputStream);
-                    outputStream.flush();
-                    if (finished) {
-                        break;
-                    }
-                } finally {
-                    socket.close();
-                }
+        DaemonConnector connector = new DaemonConnector();
+        connector.accept(new IncomingConnectionHandler() {
+            public void handle(Connection<Object> connection, Stoppable serverControl) {
+                doRun(connection, serverControl);
             }
-        } catch (IOException e) {
-            throw new UncheckedIOException(e);
-        }
+        });
     }
 
-    private boolean doRun(Socket socket, final OutputStream oos) {
+    private void doRun(final Connection<Object> connection, Stoppable serverControl) {
+        ExecutionListenerImpl executionListener = new ExecutionListenerImpl();
         try {
-            Clock clock = new Clock();
-            final InputStream ois = new BufferedInputStream(socket.getInputStream());
-            Command command = (Command) Message.receive(ois, getClass().getClassLoader());
-            LOGGER.info("Executing {}", command);
-            if (command instanceof Stop) {
-                LOGGER.lifecycle("Stopping");
-                return true;
-            }
             LoggingOutputInternal loggingOutput = loggingServices.get(LoggingOutputInternal.class);
             OutputEventListener listener = new OutputEventListener() {
                 public void onOutput(OutputEvent event) {
-                    try {
-                        Message.send(event, oos);
-                    } catch (IOException e) {
-                        throw UncheckedException.asUncheckedException(e);
-                    }
+                    connection.dispatch(event);
                 }
             };
+
+            // Perform as much as possible of the interaction while the logging is routed to the client
             loggingOutput.addOutputEventListener(listener);
             try {
-                build((Build) command, clock);
+                doRunWithLogging(connection, serverControl, executionListener);
             } finally {
                 loggingOutput.removeOutputEventListener(listener);
             }
         } catch (Throwable throwable) {
             LOGGER.error("Could not execute build.", throwable);
+            executionListener.onFailure(throwable);
         }
-        return false;
+        connection.dispatch(new CommandComplete(executionListener.failure));
     }
 
-    public void clientMain(File currentDir, ParsedCommandLine args) {
+    private void doRunWithLogging(Connection<Object> connection, Stoppable serverControl, ExecutionListener executionListener) {
+        Command command = (Command) connection.receive();
         try {
-            Socket socket = connect(args);
-            run(new Build(currentDir, args), socket);
-        } catch (Throwable t) {
-            throw UncheckedException.asUncheckedException(t);
+            doRunWithExceptionHandling(command, serverControl, executionListener);
+        } catch (Throwable throwable) {
+            BuildExceptionReporter exceptionReporter = new BuildExceptionReporter(loggingServices.get(StyledTextOutputFactory.class), new StartParameter());
+            exceptionReporter.reportException(throwable);
+            executionListener.onFailure(throwable);
         }
     }
 
-    private void build(Build build, Clock clock) {
+    private void doRunWithExceptionHandling(Command command, Stoppable serverControl, ExecutionListener executionListener) {
+        LOGGER.info("Executing {}", command);
+        if (command instanceof Stop) {
+            LOGGER.lifecycle("Stopping");
+            serverControl.stop();
+            return;
+        }
+
+        assert command instanceof Build;
+        build((Build) command, executionListener);
+    }
+
+    private void build(Build build, ExecutionListener executionListener) {
         DefaultCommandLineConverter converter = new DefaultCommandLineConverter();
         StartParameter startParameter = new StartParameter();
-        startParameter.setCurrentDir(build.currentDir);
-        converter.convert(build.args, startParameter);
+        startParameter.setCurrentDir(build.getCurrentDir());
+        converter.convert(build.getArgs(), startParameter);
         LoggingManagerInternal loggingManager = loggingServices.getFactory(LoggingManagerInternal.class).create();
         loggingManager.setLevel(startParameter.getLogLevel());
         loggingManager.start();
 
-        BuildListener resultLogger = new BuildLogger(LOGGER, loggingServices.get(StyledTextOutputFactory.class), clock, startParameter);
         try {
-            GradleLauncher launcher = launcherFactory.newInstance(startParameter);
-            launcher.useLogger(resultLogger);
-            launcher.run();
-        } catch (Throwable e) {
-            resultLogger.buildFinished(new BuildResult(null, e));
+            RunBuildAction action = new RunBuildAction(startParameter, loggingServices) {
+                @Override
+                GradleLauncherFactory createGradleLauncherFactory(ServiceRegistry loggingServices) {
+                    return launcherFactory;
+                }
+            };
+            action.execute(executionListener);
+        } catch (Throwable throwable) {
+            BuildExceptionReporter exceptionReporter = new BuildExceptionReporter(loggingServices.get(StyledTextOutputFactory.class), new StartParameter());
+            exceptionReporter.reportException(throwable);
+            executionListener.onFailure(throwable);
         }
 
         loggingManager.stop();
     }
 
-    public void stop() {
-        try {
-            maybeStop();
-        } catch (Throwable t) {
-            t.printStackTrace();
-        }
-    }
+    private static class ExecutionListenerImpl implements ExecutionListener {
+        public Throwable failure;
 
-    private void maybeStop() throws Exception {
-        Socket socket = maybeConnect();
-        if (socket == null) {
-            LOGGER.info("Gradle daemon is not running.");
-            return;
-        }
-        run(new Stop(), socket);
-        LOGGER.info("Gradle daemon stopped.");
-    }
-
-    private void run(Command command, Socket socket) throws Exception {
-        try {
-            OutputStream oos = new BufferedOutputStream(socket.getOutputStream());
-            Message.send(command, oos);
-            oos.flush();
-
-            OutputEventListener outputEventListener = loggingServices.get(OutputEventListener.class);
-            InputStream ois = new BufferedInputStream(socket.getInputStream());
-            while (true) {
-                Object object = Message.receive(ois, getClass().getClassLoader());
-                if (object instanceof Stop) {
-                    break;
-                }
-                OutputEvent outputEvent = (OutputEvent) object;
-                outputEventListener.onOutput(outputEvent);
-            }
-        } finally {
-            socket.close();
-        }
-    }
-
-    private Socket connect(ParsedCommandLine args) throws Exception {
-        DefaultCommandLineConverter converter = new DefaultCommandLineConverter();
-        StartParameter startParameter = converter.convert(args);
-        File userHomeDir = startParameter.getGradleUserHomeDir();
-
-        Socket socket = maybeConnect();
-        if (socket != null) {
-            return socket;
-        }
-
-        LOGGER.lifecycle("Starting Gradle daemon");
-        List<String> daemonArgs = new ArrayList<String>();
-        daemonArgs.add(Jvm.current().getJavaExecutable().getAbsolutePath());
-        daemonArgs.add("-Xmx1024m");
-        daemonArgs.add("-XX:MaxPermSize=256m");
-        daemonArgs.add("-cp");
-        daemonArgs.add(GUtil.join(new DefaultClassPathRegistry().getClassPathFiles("GRADLE_RUNTIME"),
-                File.pathSeparator));
-        daemonArgs.add(GradleDaemon.class.getName());
-        ProcessBuilder builder = new ProcessBuilder(daemonArgs);
-        builder.directory(userHomeDir);
-        Process process = builder.start();
-        process.getOutputStream().close();
-        process.getErrorStream().close();
-        process.getInputStream().close();
-        Date expiry = new Date(System.currentTimeMillis() + 30000L);
-        do {
-            socket = maybeConnect();
-            if (socket != null) {
-                return socket;
-            }
-            Thread.sleep(500L);
-        } while (System.currentTimeMillis() < expiry.getTime());
-
-        throw new RuntimeException("Timeout waiting to connect to Gradle daemon.");
-    }
-
-    private Socket maybeConnect() throws IOException {
-        try {
-            return new Socket(InetAddress.getByName(null), 12345);
-        } catch (ConnectException e) {
-            // Ignore
-            return null;
-        }
-    }
-
-    private static class Command implements Serializable {
-        @Override
-        public String toString() {
-            return getClass().getSimpleName();
-        }
-    }
-
-    private static class Stop extends Command {
-    }
-
-    private static class Build extends Command {
-        private final ParsedCommandLine args;
-        private final File currentDir;
-
-        public Build(File currentDir, ParsedCommandLine args) {
-            this.currentDir = currentDir;
-            this.args = args;
+        public void onFailure(Throwable failure) {
+            this.failure = failure;
         }
     }
 }
